--- a/conf/dcos-marathon-1-4-5.conf
+++ b/conf/dcos-marathon-1-4-5.conf
@@ -111,7 +111,7 @@ filter {
   }
   grok {
     match => {"message" => "^Updated groups/apps/pods according to deployment plan %{UUID:planId}"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "step"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
@@ -139,35 +139,35 @@ filter {
   }
   grok {
     match => {"message" => "^Removing %{UUID:planId} from list of running deployments"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "removed"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
   }
   grok {
     match => {"message" => "^Received new deployment plan %{UUID:planId}"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "new"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
   }
   grok {
     match => {"message" => "^Computed new deployment plan.+DeploymentPlan id=%{UUID:planId}"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "computed"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
   }
   grok {
     match => {"message" => "^Launching DeploymentActor for %{UUID:planId}"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "new"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
   }
   grok {
     match => {"message" => "^\[(?<appName>\S+)\]: scaling op detected for app"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "scale"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
@@ -224,11 +224,20 @@ filter {
   
   grok {
     match => {"message" => "^Upgrade root group version:%{TIMESTAMP_ISO8601:version} with force:(?<force>true|false)"}
-    add_field => {"class" => "deployment"}
+    add_field => {"class" => "deploy"}
     add_field => {"class2" => "upgrade"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
   }
+
+  grok {
+    match => {"message" => "^(Futures|Ask) timed out.+?DeploymentManager/%{UUID:planId}" }
+    add_field => {"class" => "deploy" }
+    add_field => {"class2" => "fail" }
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
   grok {
     match => {"message" => "^Connection attempt to (?<hostPort>\S+) failed in response"}
     add_field => {"class" => "health"}
