--- a/conf/dcos-marathon-1.4.5-filters.conf
+++ b/conf/dcos-marathon-1.4.5-filters.conf
@@ -287,6 +287,38 @@ filter {
     remove_tag => ["unclassified"]
   }
   
+  grok {
+    match => { "message" => "^task reconciliation has finished"}
+    add_field => {"class" => "reconcile"}
+    add_field => {"class2" => "finish"}
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
+  grok {
+    match => { "message" => "^initiate task reconciliation"}
+    add_field => {"class" => "reconcile"}
+    add_field => {"class2" => "initiate"}
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
+  grok {
+    match => { "message" => "^Requesting task reconciliation with the Mesos master"}
+    add_field => {"class" => "reconcile"}
+    add_field => {"class2" => "requested"}
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
+  grok {
+    match => {"message" => "reconcile \[(?<appName>\S+)\] with latest version \[%{TIMESTAMP_ISO8601:version}\]"}
+    add_field => {"class" => "health"}
+    add_field => {"class2" => "reconcile"}
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
   date {
     match => [ "logdate", "ISO8601" ]
     timezone => "UTC"
