some more grok filters

--- a/conf/dcos-marathon-1.4.5-filters.conf
+++ b/conf/dcos-marathon-1.4.5-filters.conf
@@ -312,9 +312,24 @@ filter {
   }
 
   grok {
+    match => {"message" => "Exception:.+\tat"}
+    add_field => {"class" => "exception"}
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
+  grok {
     match => {"message" => "reconcile \[(?<appName>\S+)\] with latest version \[%{TIMESTAMP_ISO8601:version}\]"}
     add_field => {"class" => "health"}
     add_field => {"class2" => "reconcile"}
+    tag_on_failure => []
+    remove_tag => ["unclassified"]
+  }
+
+  grok {
+    match => {"message" => "Proxying request to (?<method>GET|PUT|DELETE|POST|HEAD) (?<protocol>https?)://(?<authority>[^/]+)%{URIPATH:uri}(?:%{URIPARAM:params})? from .+"}
+    add_field => {"class" => "http"}
+    add_field => {"class2" => "proxy"}
     tag_on_failure => []
     remove_tag => ["unclassified"]
   }
